snippets.land translation update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102591 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -82,38 +82,37 @@ Töltse le a Firefox böngészőt az Android táblagépre és érezze kezei köz
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Töltse le a Firefox Beta verziót</a>, és mondja el véleményényét, hogy a következő Firefox verzió még fantasztikusabb legyen a 450 millió felhasználónak..
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-
+Tesztelje az új funkciókat és segítsen, hogy a következő verzió az eddigi legjobb legyen. <a href="%">Töltse le a Firefox Beta verziót!</a>
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Szereti a Firefoxot? Segíteni szeretne, hogy a következő verzió még jobb legyen? <a href="%">Töltse le a Firefox Beta verziót</a> és mondja el róla véleményét!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+A legfrissebb Firefox Beta verziót használja? <a href="%">Töltse le most</a> és segítsen az új funkciók tesztelésében.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Nem a legfrissebb Firefox Beta verziót használja? <a href="%">Töltse le most</a>, hogy figyelemmel tudja kísérni, hogy mi lesz a következő verzióban.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Szeretné elmondani véleményét? <a href="%">Tudja meg ennek módját</a> és segítsen, hogy a következő Firefox még fantasztikusabb legyen.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox Beta felhasználók: Ne felejtse el <a href="%">elmondani véleményét</a>, így segíthet nekünk a következő verzió finomhangolásában.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Segítsen, hogy a következő Firefox verzió még fantasztikusabb legyen. <a href="%">Legyen a Firefox barátja</a> és ossza meg a béta verziót barátai között.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Hívja meg barátait, hogy megnézhessék az új funkciókat. <a href="%">Legyen a Firefox barátja</a> és ossza meg másokkal a Firefox Aurora verziót.
 
 
