--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -106,7 +106,7 @@ Want to share your feedback? <a href="%">Find out how</a> and help make the next
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Úsáideoirí Firefox Béite: Ná déan dearmad <a href="%">aiseolas a thabhairt dúinn</a> agus cabhraigh linn bailchríoch a chur ar an chéad leagan eile.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
