One more translated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102593 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ga-IE/snippets.lang
+++ b/ga-IE/snippets.lang
@@ -98,7 +98,7 @@ Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us 
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Nach bhfuil an Firefox Béite is déanaí agat? <a href="%">Faigh inniu é</a> agus bí ar an eolas faoi na gnéithe a bheidh sa chéan leagan eile.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
