Corrected Basque translation mistakes, and trying new repository.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102600 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/eu/main.lang
+++ b/eu/main.lang
@@ -175,7 +175,7 @@ Sinkronizatu
 
 
 ;Develop for Mobile
-Garatu Mugikorrerako
+Garatu mugikorrerako
 
 
 ;Other Supported Platforms
@@ -219,7 +219,7 @@ Bideoak
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-<a href="%s">Besterik jakinarazi ezean</a>, webgune honetako edukia <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> lizentziarekin edo bertsio berriago batekin babestuta dago.
+<a href="%s">Besterik jakinarazi ezean</a>, webgune honetako edukia <br /><a href="%s">Creative Commons Aitortu Partekatu-Berdin v3.0</a> lizentziarekin edo bertsio berriago batekin babestuta dago.
 
 
 ;Report Trademark Abuse
