--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -82,38 +82,38 @@ Pellgargit Firefox war ho tabler Android ha grit ho mad eus galloud ar Web. <a h
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Pellgargit Firefox Beta</a>, roit ho meno ha roit skoazell deomp a-benn lakaat handelv a zeu Firefox da vezañ dreistordinaloc'h c'hoazh evit ar 450 milion a arveriaded.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Amprouit keweriusterioù, peurlipit ha purit anezho ha roit skoazell deomp a-benn lakaat hon handelv a zeu da vezañ gwelloc'h eget biskoazh. <a href="%">Pellgargit Firefox Beta hiziv !</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Plijout a ra Firefox deoc'h ? Fellout a ra deoc'h reiñ skoazell deomp a-benn lakaat hon handelv a zeu da vezañ gwelloc'h c'hoazh ? <a href="%">Pellgargit Firefox Beta</a> ha roit ho meno hiziv !
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Arverañ a rit handelv diwezhañ Firefox Beta ? <a href="%">Ho pezet anezhi bremañ</a> ha roit skoazell deomp amprouiñ ar c'heweriusterioù diwezhañ.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+N'arverit ket handelv diwezhañ Firefox Beta ? <a href="%">Ho pezet anezhi hiziv</a> a-benn gouzout ar pezh emaomp o prientiñ evit hon handelv a zeu.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Fellout a ra deoc'h rannañ ho meno ? <a href="%">Kavit penaos henn ober</a> ha roit skoazell deomp lakaat handelv a zeu Firefox da vezañ dreistordinaloc'h c'hoazh.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Arveriaded Firefox Beta : dalc'hit soñj <a href="%">reiñ ho meno</a> a-benn reiñ skoazell deomp peurlipat hon handelv a zeu.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Roit skoazell lakaat handelv a zeu Firefox da vezañ dreistordinaloc'h c'hoazh. <a href="%">Deuit da vezañ kenezel</a> ha rannit Firefox Beta gant ho mignoned.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Pedit mignoned da zizoleiñ keweriusterioù a zeu Firefox. <a href="%">Deuit da vezañ kenezel</a> ha rannit Firefox hiziv.
 
 
