--- a/br/firefoxtesting.lang
+++ b/br/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Pellgargit Firefox Beta evit Android - Digoust
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Pellgargit Firefox Beta evit an urzhiataerioù burev - Digoust
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Pellgargit hag amprouit handelvoù da zont Firefox. Arnodit an nevezadennoù diwezhañ gant an handelvoù Aurora pe Beta.
 
 
 ;Firefox Beta
@@ -18,42 +18,42 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta evit :
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta evit pellgomzer hezoug
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Pellgargit an handelv Beta ha kemerit perzh e handelv Firefox a zeu.
 
 
 ;1. Test Features
-1. Test Features
+1. Amprouit keweriusterioù
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Arnodit ar gwellaennoù diwezhañ a-fet digonusted, personelaat ha diogelroez.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Peurlipat ha purañ
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Danevellit beugoù a-benn reiñ skoazell deomp peurlipat an digonusted hag ar c'heweriusterioù e-barzh un endro stabil.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Deoc'h-c'hwi da c'hoari
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Levezonit penaos e vo handelv a zeu Firefox a vo arveret gant 450 milionoù a dud bemdez.
 
 
 ;Supported devices
-Supported devices
+Trevnadoù skoret
 
 
