[br] Correction for firefoxtesting.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102608 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/firefoxtesting.lang
+++ b/br/firefoxtesting.lang
@@ -50,7 +50,7 @@ Danevellit beugoù a-benn reiñ skoazell deomp peurlipat an digonusted hag ar c'
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Levezonit penaos e vo handelv a zeu Firefox a vo arveret gant 450 milionoù a dud bemdez.
+Levezonit penaos e vo handelv a zeu Firefox a vo arveret gant 450 milion a dud bemdez.
 
 
 ;Supported devices
