update of frefoxtesting and snippets lng files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102640 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -82,38 +82,38 @@ Descargá Firefox en tu tablet Android y tené el poder de la Web en tus manos. 
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Descargá Firefox Beta</a>, danos tu opinión y ayudá a que el próximo Firefox sea aún más impresionante para nuestros 450 millones de usuarios.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Probá las funcionalidades, afinalas y pulilas y ayudanos a hacer que la próxima versión sea más grandiosa que nunca. <a href="%">¡Descargá Firefox Beta ya!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+¿Querés a Firefox? ¿Querés ayudar para que la próxima versión sea aún mejor? <a href="%">Descargá Firefox Beta</a> y ¡danos tu opinión!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+¿Estás usando la última versión de Firefox Beta? <a href="%">Descargalo</a> y ayudanos a probar las últimas funcionalidades.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+¿No tenés la última versión de Firefox Beta? <a href="%">Descargala</a> para estar al corriente de nuestro trabajo para la próxima versión.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+¿Querés darnos tu opinión? <a href="%">Encontrá cómo</a> y ayudanos a hacer que la próxima versión de Firefox sea aún más increíble.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Usuarios de Firefox Beta: no se olviden de <a href="%">darnos su opinión</a> para ayudarnos a realizar los últimos ajustes en la próxma versión.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Ayudanos a hacer que la próxima versión de Firefox sea aún más impresionante. <a href="%">Convertite en un afiliado</a> y compartí Firefox Beta con tus amigos.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Invitá a tus amigos a probar las próximas funcionalidades de Firefoxs. <a href="%">Convertite en afiliado</a> y compartí Firefox Aurora.
 
 
