--- a/es-AR/firefoxtesting.lang
+++ b/es-AR/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Descargá Firefox Beta para Android - Gratis
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Descargá Firefox Beta para tu PC - Gratis
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Descargá y probá las próximas versiones de Firefox. Experimentá las nuevas innovaciones con las versiones Aurora y Beta.
 
 
 ;Firefox Beta
@@ -18,42 +18,42 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta para:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta para móviles
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Descargá Beta y sé parte de la próxima versión de Firefox.
 
 
 ;1. Test Features
-1. Test Features
+1. Probá funcionalidades
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Probá las últimas mejoras en rendimiento, personalización y seguridad casi listas para su salida final.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Afinación y pulido
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Reportá errores para ayudarnos a darle los toques finales antes de la salida de la versión final.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Hacé tu parte
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Podés ayudar en la próxima versión de Firefox y a los 450 millones de personas que los usan cada día.
 
 
 ;Supported devices
-Supported devices
+Dispositivos disponibles
 
 
