--- a/sq/newsletter.lang
+++ b/sq/newsletter.lang
@@ -47,15 +47,15 @@ Së shpejti do të ndajmë me ju ndihmëza dhe këshilla rreth se si të përfit
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Pajtohuni te përditësimet mujore dhe merrni vazhdimisht lajmet më të reja nga Mozilla, përfshi ndihmëzat më të reja për të përfituar maksimumin nga shfletuesi juaj Firefox. Mënyra e përsosur që të mbajnë lidhjet me njëri-tjetrin!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Sapo ju dërguam me eamil një mesazh ripohimi. Klikoni mbi lidhjen e ripohimit te ai email dhe bëjeni të vlefshme pajtimin tuaj te kjo listë postimesh.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Lexoni gjithçka për të te <span>buletini</span> ynë
 
 
 ;Format
