--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -82,41 +82,39 @@ Shkarkojeni Firefox-in te tableti juaj Android dhe merreni fuqinë e Web-it në 
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Shkarkoni Firefox Beta-n</a>, jepni përshtypjet tuaja dhe ndihmoni që ta bëjmë Firefox-in e ardhshëm edhe më të mahnitshëm pr 450 milionë përdoruesit tanë.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Provoni veçoritë e reja, përimtësojni dhe lustrojini ato, dhe na ndihmoni ta bëjmë versionin tonë pasues atë më të mirin se kurrë. <a href="%">Shkarkojeni Firefox Beta-n që sot!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+E doni Firefox-in? Dëshironi të ndihmoni për ta bërë edhe më të mirë versionin tonë të ardhshëm? <a href="%">Shkarkoni Firefox Beta-n</a> dhe na jepni që sot përshtypjet tuaja!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+A xhironi Firefox Beta-n më të ri? <a href="%">Merreni tani</a> dhe na ndihmoni të vëmë në provë veçoritë më të reja.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Jo me Firefox Beta-n më të ri? <a href="%">Merreni që sot</a> që të dini se mbi çfarë po punojmë për versionin e ardhshëm.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Doni të ndani me të tjerët përshtypjet tuaja? <a href="%">Mësojeni se si</a> dhe na ndihmoni ta bëjmë edhe më të mahnitshëm versionin pasues të Firefox-it.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Përdorues të Firefox Beta-s: Mos harroni të <a href="%">na jepni përshtypjet</a> që të na ndihmoni të fusim te versioni ynë pasues përmirësimet përfundimtare.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Ndihmoni që të bëhet edhe më i mahnitshëm versioni pasues i Firefox-it. <a href="%">Bëhuni një Përhapës</a> dhe ndajeni Firefox Beta-n me miqtë tuaj.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-
+Ftoni miq tuajt të marrin një ide mbi veçoritë e ardhshme të Firefox-it. <a href="%">Bëhuni një Përhapës</a> dhe ndajeni Firefox Aurora-n që sot me të tjerët.
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-
+{l10n-extra}Çmime të vyera! Anëtarë jurie nga Hollivudi! Pika çuditëse! <a href="%">Merrni Pjesë te Firefox Flicks</a>, një garë mbarëbotërore videosh që të tregojnë historinë tonë, ku mund të votoni për të parapëlqyerën tuaj!
