l10n: es-AR, add an {ok} string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102664 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/firefoxtesting.lang
+++ b/es-AR/firefoxtesting.lang
@@ -14,7 +14,7 @@ Descargá y probá las próximas versiones de Firefox. Experimentá las nuevas i
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
