l10n: br, add an {ok} string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102667 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/br/firefoxtesting.lang
+++ b/br/firefoxtesting.lang
@@ -14,7 +14,7 @@ Pellgargit hag amprouit handelvoù da zont Firefox. Arnodit an nevezadennoù diw
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
