l10n: csb, update by Jurk
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102678 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/main.lang
+++ b/csb/main.lang
@@ -79,7 +79,7 @@ Centróm prasowé
 
 
 ;Site contact
-Administratór starnë
+Administratór stronë
 
 
 ;Other languages:
@@ -159,7 +159,7 @@ Nót je <a href="http://get.adobe.com/flashplayer/">zaktualnic Adobe Flash Playe
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox je zaktualniony, ale Twòja wersjô òdgrëwacza Flash mô problemë bezpiekù ë nie je sztabilnô. Wjinstalëjë <a href="http://get.adobe.com/flashplayer/">aktualizacjã - darmôk</a> tak chùtkò jak to je mòżlëwi.
+Firefox je zaktualniony, ale Twòja wersjô òdgriwacza Flash mô problemë bezpiekù ë nie je sztabilnô. Wjinstalëjë <a href="http://get.adobe.com/flashplayer/">aktualizacjã - darmôk</a> tak chùtkò jak to je mòżlëwi.
 
 
 ;Features
@@ -191,7 +191,7 @@ Wëbierzë swój môl
 
 
 ;Download Firefox directly from your phone
-Zladëjë Firefoksa prosto na swòój telefón
+Zladëjë Firefoksa prosto na swój telefón
 
 
 ;Download
