--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -82,38 +82,37 @@ Zladëjë Firefoksa na Androida ë wezni sprawë sécë w swòje rãcé. <a href
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Zladëjë Firefox Beta</a>, dôj nama znac co mëslisz, ë pòmòżë zrobic Firefoksa jesz bëlniészim dlô 450 milionów bëkòwników. 
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Wëpróbùjë fùnkcje, pòdrëchtùjë je ë pòmòżë nama ùdobrzëc przińdną wersjã. <a href="%">Zladëjë Firefox Beta ju dzys!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Widzy Cë sã Firefox? Chcesz pòmòc w ùdobrzenim przińdny wersji? <a href="%">Zladëjë Firefox Beta</a> ë zarô dô nama znac co mëslisz!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Môsz ju wjinstalowóné nônowszą wersjã Beta? <a href="%">Zladëjë ją terô</a> ë pòmòżë nama przetestowac nônowszé fùnkcje.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-
+Ni môsz jesz nônowszi wersji Beta? <a href="%">Scygni ją ju dzys</a> abë òbaczëc co chcemë wdostac do finalny wersji.
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Chcesz nama sélac repòrtë? <a href="%">Wëwiedzë sã jak</a> ë pòmòżë nama zrobic przińdną wersjã Firefoksa jesz bëlniészą.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Brëkòwnicë wersji Beta: Nie zabôczta <a href="%">sélac rapòrtów</a> chtërné pòmògą nama pòdrëchtowac przińdną wersjã.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Pòmòżë nama zrobic przińdną wersjã Firefoksa jesz bëlniészą. <a href="%">Òstani naszim partnerã</a> ë pòdzelë sã wersją Beta ze swòjima drëchama.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Zaprosë swòjich drëchów do przezdrzeniô przińdnëch fùnkcjów Firefoksa. <a href="%">Òstani partnerã</a> ë pòdzelë sã wersją Aurora ju dzys.
 
 
