--- a/csb/snippets.lang
+++ b/csb/snippets.lang
@@ -113,6 +113,6 @@ Pòmòżë nama zrobic przińdną wersjã Firefoksa jesz bëlniészą. <a href="
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Zaprosë swòjich drëchów do przezdrzeniô przińdnëch fùnkcjów Firefoksa. <a href="%">Òstani partnerã</a> ë pòdzelë sã wersją Aurora ju dzys.
+Zaprosë swòjich drëchów do przezdrzeniô przińdnëch fùnkcjów Firefoksa. <a href="%">Òstani partnerã</a> ë pòdzelë sã wersją Aurora ju dzysô.
 
 
