Bug 727041 - [ko] Localize new firefox beta download page for desktop and mobile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102729 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ko/snippets.lang
+++ b/ko/snippets.lang
@@ -82,38 +82,31 @@ Firefox 안드로이드 버전은 여러분의 태블릿에 최적화 되어 있
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Firefox Beta 다운로드</a>도 하시고 다음 버전을 사용할 4억 5천만의 사용자를 위해 미리 의견을 보내 주십시오.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+신 기능을 테스트하고 문제점을 찾아 주셔서 더 나은 Firefox를 함께 만들어 주세요. 지금 <a href="%">Firefox Beta</a>를 다운로드해 주십시오!
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-
+Firefox를 사랑하신다면 다음 버전에 도움을 주실 수 있습니다. <a href="%">Firefox Beta 다운로드</a> 후 사용 의견을 보내주십시오!
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-
+최신 Firefox 베타를 실행 중이신가요? <a href="%">지금 다운로드</a>하셔서 새 기능을 미리 맛보세요.
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-
+최신 Firefox Beta를 사용하지 않으시나요? <a href="%">지금 다운로드</a>하셔서 다음 버전에 있는 새 기능을 미리 맛보세요.
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-
+여러분의 의견을 공유하시겠습니까? <a href="%">간단한 방법</a>으로 여러분의 생각을 전달하실 수 있습니다.
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-
+Firefox 사용자 여러분! <a href="%">여러분의 의견</a>을 보내 주시면 다음 버전에서 더 멋진 브라우저를 만들어 드립니다. 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-
+Firefox 다음 버전을 위해 도움을 주십시오. <a href="%">Firefox 제휴 사이트</a>를 통해 Firefox Beta 버전을 알릴 수 있습니다.
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-
+친구에게 Firefox의 새로운 기능을 알려주세요. <a href="%">Firefox 제휴 사이트</a>를 통해 Firefox Aurora 버전을 알릴 수 있습니다.
 
