--- a/cs/firefoxtesting.lang
+++ b/cs/firefoxtesting.lang
@@ -14,7 +14,7 @@ Stáhněte si a otestujte budoucí verze Firefoxu. Vyzkoušejte si nejnovější
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
