[l10n][fr] Updating snippets.lang.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102776 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -118,5 +118,5 @@ Invitez vos amis à découvrir en avant-première les futures fonctionnalités d
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
+{l10n-extra}Des grands prix&nbsp;! Des juges hollywoodiens&nbsp;! Des points d'exclamation&nbsp;! Participez à <a href="%">Firefox Flicks</a>, le concours vidéo mondial pour raconter notre histoire, ou votez pour vos vidéos préférées&nbsp;!
 
