update Translation for Bug: 727055
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102783 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pa-IN/snippets.lang
+++ b/pa-IN/snippets.lang
@@ -30,19 +30,19 @@
 
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
-Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
+ਫਾਇਰਫਾਕਸ ਬਹੁਤ ਮਾਣ ਨਾਲ ਗ਼ੈਰ-ਫਾਇਦਾ ਅਤੇ ਤੁਹਾਡੇ ਵਜੋਂ ਬਿਨਾਂ ਕਿਸੇ ਸਮਝੌਤੇ ਦੇ ਖੋਜਾਂ ਕਰਨ ਲਈ ਮੁਕਤ ਹੈ।  ਸਾਡੇ ਟੀਚੇ ਬਾਰੇ <a href="%s">ਹੋਰ ਜਾਣੋ</a>।
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
+ਤੇਜ਼, ਲਚਕੀਲਾ ਅਤੇ ਸੁਰੱਖਿਅਤ, ਫਾਇਰਫਾਕਸ ਕੇਵਲ ਬਰਾਊਜ਼ਰ ਹੈ, ਜਿਸ ਵਿੱਚ ਤੁਹਾਨੂੰ ਪਹਿਲ ਦਿੱਤੀ ਜਾਂਦੀ ਹੈ। <a href="%s">ਹੋਰ ਜਾਣੋ</a> ਕਿ ਕਿਵੇਂ ਅਸੀਂ ਡਿਜ਼ਾਇਨ ਨਾਲ ਵੱਖਰੇ ਹਨਾਂ।
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
+<a href="%s">ਆਪਣੇ ਐਡਰਾਇਡ ਟੇਬਲੇਟ ਉੱਤੇ ਫਾਇਰਫਾਕਸ ਡਾਊਨਲੋਡ ਕਰੋ</a> ਅਤੇ ਵੈੱਬ ਨੂੰ ਆਪਣੇ ਹੱਥਾਂ ਵਿੱਚ ਲਵੋ। ਇਹ ਹੁਣੇ ਪ੍ਰਾਪਤ ਕਰੋ।
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
-Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
+ਆਪਣੀਆਂ ਪਲੱਗਇਨ ਨੂੰ ਅੱਪ ਟੂ ਡੇਟ ਰੱਖੋ ਅਤੇ <a href="%s">ਪਲੱਗਇਨ ਚੈੱਕ</a> ਨਾਲ ਆਨਲਾਈਨ ਸੁਰੱਖਿਅਤ ਰਹੋ।
 
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
@@ -78,7 +78,7 @@ Firefox for Android is now optimized for the way you browse on tablets. <a href=
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
-Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
+ਆਪਣੇ ਐਡਰਾਇਡ ਟੇਬਲੇਟ ਉੱਤੇ ਫਾਇਰਫਾਕਸ ਡਾਊਨਲੋਡ ਕਰੋ ਅਤੇ ਆਪਣੇ ਹੱਥਾਂ ਵਿੱਚ ਵੈੱਬ ਦੀ ਤਾਕਤ ਲਵੋ। <a href="%s">ਇਹ ਹੁਣੇ ਲਵੋ</a>।
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
@@ -90,7 +90,7 @@ Test features, refine and polish them and help us make our next version better t
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+ਫਾਇਰਫਾਕਸ ਨਾਲ ਪਿਆਰ ਕਰਦੇ ਹੋ? ਆਪਣੇ ਨਵੇਂ ਵਰਜਨ ਨੂੰ ਹੋਰ ਵੀ ਵਧੀਆ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ? <a href="%">ਫਾਇਰਫਾਕਸ ਬੀਟਾ ਡਾਊਨਲੋਡ ਕਰੋ</a> ਅਤੇ ਸੁਝਾਅ ਅੱਜ ਹੀ ਸਾਨੂੰ ਦਿਉ!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
@@ -102,7 +102,7 @@ Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of w
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+ਆਪਣੇ ਸੁਝਾਅ ਸਾਂਝੇ ਕਰਨੇ ਚਾਹੁੰਦੇ ਹੋ? <a href="%">ਲੱਭੋ ਕਿ ਕਿਵੇਂ</a> ਅਤੇ ਫਾਇਰਫਾਕਸ ਦੇ ਨਵੇਂ ਵਰਜਨ ਨੂੰ ਹੋਰ ਵੀ ਵਧੀਆ ਬਣਾਉਣ ਲਈ ਮੱਦਦ ਕਰੋ।
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
@@ -110,10 +110,10 @@ Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us 
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+ਫਾਇਰਫਾਕਸ ਦੇ ਨਵੇਂ ਵਰਜਨ ਨੂੰ ਚੋਟੀ ਦਾ ਬਣਾਉਣ ਲਈ ਮੱਦਦ ਕਰੋ। <a href="%">ਸਬੰਧ ਬਣਾਉ</a> ਅਤੇ ਆਪਣੇ ਦੋਸਤਾਂ ਨਾਲ ਫਾਇਰਫਾਕਸ ਬੀਟਾ ਸਾਂਝਾ ਕਰੋ।
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+ਆਪਣੇ ਦੋਸਤਾਂ ਨੂੰ ਫਾਇਰਫਾਕਸ ਦੇ ਨਵੇਂ ਫੀਚਰ ਵਰਤਣ ਲਈ ਸੱਦਾ ਦਿਉ। <a href="%">ਸਬੰਧ ਬਣਾਉ</a> ਅਤੇ ਫਾਇਰਫਾਕਸ ਅਰੋਰਾ ਨੂੰ ਅੱਜ ਹੀ ਸਾਂਝਾ ਕਰੋ।
 
 
