--- a/pa-IN/snippets.lang
+++ b/pa-IN/snippets.lang
@@ -62,7 +62,7 @@ Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit 
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
-Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
+ਨਵੇਂ ਫੀਚਰਾਂ ਦੀ ਪਹਿਲੀ ਝਲਕ ਲਵੋ, ਇਸ ਤੋਂ ਪਹਿਲਾਂ ਕਿ ਉਹ ਬੀਟਾ ਵਿੱਚ ਆਉਣ। <a href="%s">ਫਾਇਰਫਾਕਸ ਅਰੋਰਾ ਡਾਊਨਲੋਡ ਕਰੋ।</a>
 
 
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
