snippets sl in the new repo
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102795 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -58,7 +58,7 @@ Uporabniki Firefoxa so si tako različni. <a href="%s">Dodajte gumbe svojemu brs
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Oblecite svoj Firefox v Persone Popeljite čeznje za poskus ali pa kliknite nanje, da si jih prenesete.  Lahko tudi obiščete <a href="%s">galerijo</a> f s tisoči drugih!
+Oblecite svoj Firefox v Persone. Popeljite čeznje za poskus ali pa kliknite nanje, da si jih prenesete.  Lahko tudi obiščete <a href="%s">galerijo</a> f s tisoči drugih!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
@@ -122,5 +122,5 @@ Povabite znance, da si ogledajo najnovejše funkcije v Firefoxu. <a href="%">Pos
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
-{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
+{l10n-extra}Lepe nagrade! Sodniki iz Hollywooda! Klicaji! <a href="%">Sodelujte v Firefox Flicks</a>, v svetovnem nagradnem tekmovanju s svojo zgodbo, ali pa glasujte za svoje favorite!
 
