l10n:lij sintax correction
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@102840 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/home.lang
+++ b/lij/home.lang
@@ -1,13 +1,13 @@
 ﻿# common strings for all pages
 
 ;Personalize
-Personalizza
+Personalìzza
 
 ;One size doesn’t fit all.
 'Na gràndessa a no va pròpio bén.
 
 ;Go Fast
-Vâi velôce
+Vànni velôce
 
 ;Accelerate the way you use the web.
 Acèlera o mòddo de adêuviâ a ræ.
@@ -16,7 +16,7 @@ Acèlera o mòddo de adêuviâ a ræ.
 Stànni béllo segûo
 
 ;We’ve got your back.
-We’ve got your back.
+Niâtri te covrìmmo e spàlle.
 
 ;Get Firefox on your phone!
 Pìgite Firefox into teu telefonìn!
@@ -31,7 +31,7 @@ O l'é fæto pe-a condivixión.
 Fànni <br/> di féuggi <br/> dedicæ
 
 ;Customize <br/> to make <br/> it faster
-Personalizza <br/> pe anâ <br/> ciù velôce
+Personalìzza <br/> pe anâ <br/> ciù velôce
 
 ;Get add-ons <br/> and make <br/> it easier
 Pìgite i conponénti azónti <br/> e fànni tùtto <br/> con ciù façilitæ
@@ -68,7 +68,7 @@ Ancón ciù <br/> afidàbile
 # Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 
 ;Effortless <br/> customization
-Effortless <br/> customization
+Pesonalizaçión <br/> façilitâ
 
 ;Advanced <br/> security
 Seguéssa <br/> avansâ
@@ -80,4 +80,4 @@ Seguéssa <br/> avansâ
 Gràfica <br/> avansâ
 
 ;Improved <br/> reliability
-afidabilitæ <br/> megiorâ
+Afidabilitæ <br/> megiorâ
