--- a/lij/main.lang
+++ b/lij/main.lang
@@ -163,7 +163,7 @@ O Firefox o l'é agiornòu, ma a teu versción do Flash Player peu avéi di prob
 
 
 ;Features
-Càrateristiche
+Carateristìche
 
 
 ;Customize
@@ -231,7 +231,7 @@ Agiornaménto de bàdda
 
 
 ;Follow us on:
-Segoine in sciô:
+Ségoine in sciô:
 
 
 ;Customize with Add-ons
@@ -302,7 +302,7 @@ O domàn da ræ o t'aspêta!
 
 
 ;The future of the Web starts now.
-O domàn da ræ iniçia za òua.
+O domàn da ræ o l'inìçia za òua.
 
 
 ;Try Firefox with a fresh look and feel.
