--- a/lij/mobile.lang
+++ b/lij/mobile.lang
@@ -10,7 +10,7 @@ Descaregaménto pe <span>Android</span>
 Descaregaménto pe <span>Nokia N900</span>
 
 ;Get Firefox for Maemo by visiting <a %s>Firefox.com/m</a> on your phone.
-Descàrega Firefox pe Maemo vìxitanto <a %s>Firefox.com/m</a> dò-u teu telefonìn.
+Descàrega Firefox pe Maemo vixitàndo <a %s>Firefox.com/m</a> dò-u teu telefonìn.
 
 ;Free from the Android Market
 De bàdda dò-u Android Market
@@ -22,7 +22,7 @@ De bàdda dò-u Android Market
 Aparâti sopórtæ
 
 ;Get it from iTunes - FREE
-Descàregalo da iTunes - DE BÀDDA
+Descàreghilo da iTunes - DE BÀDDA
 
 ;Firefox Home for <span>iPhone</span>
 Firefox Home pe <span>iPhone</span>
