--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -2,7 +2,7 @@
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Pòrta Firefox de lóngo con ti! L'ùrtimo Firefox pe Android o l'é chi prónto pe ti. <a href="%s">Descàregalo òua.</a>
+Pòrta Firefox de lóngo con ti! L'ùrtimo Firefox pe Android o l'é chi prónto pe ti. <a href="%s">Descàreghilo òua.</a>
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
@@ -38,7 +38,7 @@ Velôce, fléscibile e segûo, Firefox o l'é o sôlo navegatô ch'o métte ti a
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Descàrega Firefox da-a teu tablet Android</a> e pòrta a poténsa do Web in sce teu màn. Descàregalo òua.
+<a href="%s">Descàrega Firefox da-a teu tablet Android</a> e pòrta a poténsa do Web in sce teu màn. Descàreghilo òua.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
