--- a/lij/download.lang
+++ b/lij/download.lang
@@ -1,5 +1,5 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, o navegatô de bàdda, o l'é creòu da 'na asociaçión sénsa fìn de goâgno e métte scìngole personn-e ao prìmmo pòsto e dizégna l'avegnî do web cómme bén pùblico
+Mozilla Firefox, o navegatô de bàdda, o l'é creòu da 'na asociaçión sénsa fìn de goâgno e métte e scìngole personn-e a-o prìmmo pòsto e dizégna l'avegnî do web cómme bén pùblico
 
 
 ;Different by Design
@@ -23,7 +23,7 @@ Gràçie de avéi scelto o Firefox!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-O teu descaregaménto o dêve comensâ in quàrche segóndo, ma se coscì no fîse, <a href="%s">sciàcca chi</a>.
+O teu descaregaménto o dêve comensâ fra quàrche segóndo, ma se coscì no fîse, <a href="%s">sciàcca chi</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
@@ -31,7 +31,7 @@ Scicómme sémmo sénsa fìn de goâgno, sémmo lìberi de inovâse a teu vantà
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-Benvegnûo into sôlo navegatô <em>ch'o métte ti ao prìmmo pòsto.</em>
+Benvegnûo into sôlo navegatô <em>ch'o métte ti a-o prìmmo pòsto.</em>
 
 
 ;Mozilla Firefox Web Browser
